syntax = "proto3";

package users;

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
  string role = 5;
  bool isActive = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message CreateUserRequest {
  string name = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string confirmPassword = 5;
  string role = 6;
}
message UserResponse { User user = 1; }

message GetUserRequest { string id = 1; }

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
}

message DeleteUserRequest { string id = 1; }

message ListUsersRequest {
  string emailFilter = 1;
  string nameFilter = 2;
  string lastNameFilter = 3;
}
message ListUsersResponse { repeated User users = 1; }

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
